<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/ellipse_41"
        android:layout_width="193dp"
        android:layout_height="91dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="218dp"
        android:background="@drawable/ic_ellipse_41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Sign Up -->
    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="257dp"
        android:layout_marginBottom="482dp"
        android:gravity="top"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Login -->

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="134dp"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="189dp"
        android:layout_marginBottom="482dp"
        android:gravity="top"
        android:text="@string/login"
        android:textAppearance="@style/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- What do you want to sign up as? -->

    <TextView
        android:id="@+id/what_do_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="221dp"
        android:layout_marginEnd="184dp"
        android:layout_marginBottom="407dp"
        android:gravity="top"
        android:text="@string/what_do_you"
        android:textAppearance="@style/what_do_you"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Line 51 -->


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="246dp"
        android:layout_marginBottom="468dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545"
        app:srcCompat="@drawable/ic_line_52" />

    <View
        android:id="@+id/ellipse_40"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="51dp"
        android:background="@drawable/ic_ellipse_40"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ellipse_39"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <View
        android:id="@+id/ellipse_39"
        android:layout_width="98dp"
        android:layout_height="69dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="594dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/ic_ellipse_39"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ellipse_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="468dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/ic_line_51" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="312dp"
        android:layout_height="41dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="445dp"
        android:layout_marginBottom="154dp"
        app:cardBackgroundColor="@color/colorLightGreeen"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="false"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingStart="138dp"
            android:paddingTop="10dp"
            android:textAppearance="@style/next"

            android:text="@string/next" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="304dp"
        android:layout_height="72dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="249dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="319dp"
        android:background="@color/bgcolorgrey"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/independent"
            android:textAppearance="@style/independent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="40dp"
            android:text="@string/signup_as_a"
            android:textAppearance="@style/signup_as_a" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="304dp"
        android:layout_height="72dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="337dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="231dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oga_designer"
            android:textAppearance="@style/oga_designer"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"/>

        <TextView
            android:id="@+id/textViiew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="40dp"
            android:text="@string/signup_as_an_oga"
            android:textAppearance="@style/signup_as_an_oga" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>